# fiap-fase5-datathon

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/processed/: Base de Dados PEDE.xlsx  base_processada.xlsx  sample_predicoes.xlsx  sample_predicoes_app.xlsx  sample_predicoes_app_real.xlsx  validacao_app_passos_magicos.xlsx
models/: config_passos_magicos.pkl
notebooks/: Challenger_05.ipynb  Datathon_FIAP_Fase_5.ipynb  Perceptron de múltiplas camadas.ipynb
references/: PEDE_ Pontos importantes.docx
references/DATATHON/: Links adicionais da passos.docx
references/DATATHON/DATATHON/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx  PEDE_ Pontos importantes.docx
references/DATATHON/DATATHON/Bases antigas/: PEDE_PASSOS_DATASET_FIAP.xlsx
