[project]
name = "passos_magicos_datathon"
version = "0.1.0"
description = "Projeto de Data Analytics para o Datathon Fase 5 - Passos Mágicos"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "scikit-learn",
    "tensorflow",
    "keras",
    "joblib",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "xgboost",
    "tqdm",
    "shap"
]